# tacotron2

./: CLAUDE.md  README.md  inference_cli.py  pyproject.toml
docs/: ARCHITECTURE.md  ATTENTION.md  TRAINING.md  WAVEGLOW.md
