[project]
name = "tacotron2"
version = "0.1.0"
description = "Tacotron2 Text-to-Speech"
requires-python = ">=3.10,<3.12"
dependencies = [
    "gdown>=5.2.0",
    "inflect>=7.5.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "scipy>=1.15.3",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "unidecode>=1.4.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
